--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Tharun Teja Gandham &amp; Mourya Rai Papolu (Advisor: Dr. Cohen)">
-<meta name="dcterms.date" content="2025-04-05">
+<meta name="dcterms.date" content="2025-04-10">
 
 <title>Missing Data and Imputation</title>
 <style>
@@ -3267,7 +3267,7 @@ window.Quarto = {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">April 5, 2025</p>
+      <p class="date">April 10, 2025</p>
     </div>
   </div>
   
@@ -3279,6 +3279,7 @@ window.Quarto = {
 </header>
 
 
+<p>Slides: <a href="slides.html" target="_blank">slides.html</a> ( Go to <code>slides.qmd</code> to edit)</p>
 <section id="introduction" class="level2">
 <h2 class="anchored" data-anchor-id="introduction">Introduction</h2>
 <p>Across healthcare, social sciences and finance sectors missing data continues as an extensive problem because it creates biased outcomes and reduces research reliability and weakens research conclusions unless appropriate data handling methods are used <span class="citation" data-cites="salgado2016missing">(<a href="#ref-salgado2016missing" role="doc-biblioref">Salgado et al. 2016</a>)</span>. The Electronic Health Records (EHR) dataset faces high vulnerability to missing data from technological breakdowns as well as human mistakes and data loss incidents. In various fields missing data originates from survey non-responses and equipment failures as well as data entry errors <span class="citation" data-cites="alwateer2024missing">(<a href="#ref-alwateer2024missing" role="doc-biblioref">Alwateer et al. 2024</a>)</span>. Improper handling of missing data leads to severe consequences on the quality of research findings and decision-making processes particularly when analyzing clinical epidemiology and structured datasets.</p>
